--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,6 +48,15 @@ input.medium-input {
     float:left;
 }
 
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .like-us {
     position:absolute;
     line-height:46px;
